Fix bot-button alignment.
Edited margins and removed gap to stop issue with text coming out of box when shrinking.

--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,12 @@ a {
 .bot-button {
     display: flex;
     background-color: #3882F6;
-    margin: 125px 200px;
-    padding: 100px;
+    margin: 75px 87px;
+    padding: 21px;
+    justify-content: space-evenly;
+    align-items: center;
+    /* gap is causing content to smash when shrunk*/
+    /* gap: 172px; */
 }
 
 .bot-button h2 {
@@ -142,6 +146,14 @@ a {
     border-radius: 10px;
     padding: 7px 20px;
     color: white;
+}
+
+.bot-text {
+    display: flex;
+}
+
+.bot-but {
+    display: flex;
 }
 
 .footer {
